<!--
  ~ Copyright (c) 2022 LinkTechTips
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>org.LinkTechTips</groupId>
    <artifactId>BetterFSD-Java</artifactId>
    <version>1.0.0</version>
    <name>BetterFSD-Java</name>
    <description>Java refactoring version of BetterFSD</description>
    <url>https://github.com/LinkTechTips/BetterFSD-Java</url>
    <issueManagement>
        <url>https://github.com/LinkTechTips/BetterFSD-Java/issues</url>
        <system>Github Issues</system>
    </issueManagement>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://github.com/LinkTechTips/BetterFSD-Java/blob/main/LICENSE</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <url>https://github.com/LinkTechTips/BetterFSD-Java</url>
        <connection>scm:git:git://github.com/LinkTechTips/BetterFSD-Java.git</connection>
        <developerConnection>scm:git:git@github.com:LinkTechTips/BetterFSD-Java.git</developerConnection>
        <tag>master</tag>
    </scm>
    <developers>
        <developer>
            <email>3174327625@qq.com</email>
            <name>Yuheng Wu</name>
            <url>https://github.com/LinkTechTips</url>
            <id>LinkTechTips</id>
        </developer>
    </developers>
    <properties>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <!--slf4j日志门面-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.25</version>
        </dependency>
        <!--logback日志实现 logback-classic涵盖了logback-core依赖,不需要重复导入-->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.3</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>23.0.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>com.sun.net.httpserver</groupId>
            <artifactId>http</artifactId>
            <version>20070405</version>
        </dependency>
    </dependencies>
    <build>
        <defaultGoal>compile</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>2.7.5</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>